src/main/java/com/example/sap_shop/error/UserAlreadyExistException.java
package com.example.sap_shop.error;

public class UserAlreadyExistException extends Exception{
    public UserAlreadyExistException(String message) {
        super(message);
    }
}
